<resources>
    <string name="app_name">Flash Table</string>
    <string name="server_domain">http://35.186.159.16/</string>
    <string name="server_ip">35.186.159.16</string>
    <string name="server_acc">service_flashtable</string>
    <string name="server_pwd">service_flashtable</string>
    <string name="service_email">service@daydreamstudio.co</string>
    <string name="service_facebook">https://www.facebook.com/FLASHTABLE</string>
    <string name="title_activity_customer_main">CustomerMainActivity</string>
    <string name="account_name">白日夢文創股份有限公司</string>
    <string name="bank_code">008</string>
    <string name="bank_name">(華南銀行 樟樹灣分行)</string>
    <string name="account_number">192–10–003818–1</string>
    <string name="email">service.flashtable@gmail.com</string>
    <string name="payment_notice1">請持上方帳號，至ATM自動櫃員機選擇轉帳即可付款。部分銀行將向您收取轉帳手續費。</string>
    <string name="payment_notice2">我們將會在收到E-mail郵件後3日內完成確認，並回覆E-mail確認收款成功。</string>
    <string name="submit">確認送出</string>
    <string name="ok">確認</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="search">搜尋</string>
    <string name="discount">折</string>
    <string name="dollars">元</string>
    <string name="dialog_cancel_success_reservation">商家正在為您安排桌位中\n確定要取消嗎？</string>
    <string name="dialog_restaurant_refuse_reservation">餐廳已拒絕你的訂位</string>
    <string name="dialog_restaurant_cancel_reservation">餐廳已取消你的訂位</string>
    <string name="dialog_restaurant_no_response">店家無回應</string>
    <string name="dialog_loading_data_fail">資料載入失敗，請重試</string>
    <string name="dialog_network_unable">網路連線失敗，請檢查你的網路</string>
    <string name="dialog_gps_permission">您需要允許裝置使用定位服務才可以搜尋自己附近的餐廳喔！</string>
    <string name="login_as_customer">一般用戶登入</string>
    <string name="login_as_store">店家後台登入</string>
    <string name="login_store_title">店家專用管理後台</string>
    <string name="login_cellphone">手機號碼</string>
    <string name="login_account">帳號</string>
    <string name="login_password">密碼</string>
    <string name="login_submit">登入</string>
    <string name="login_register">立即註冊</string>
    <string name="login_apply">免費申請</string>
    <string name="login_forgot_password">忘記密碼？</string>
    <string name="login_success">歡迎，</string>
    <string name="login_wait">請稍候</string>
    <string name="login_error_typo">輸入帳號或密碼錯誤</string>
    <string name="login_error_connection">連線失敗，請重試</string>
    <string name="login_error_invalid">帳號/密碼無效，請重試</string>
    <string name="alert_title">提醒</string>
    <string name="customer_profile_pic">/flashCroppedAvatar.png</string>
    <string name="customer_register_title">一般帳號資料填寫：</string>
    <string name="customer_register_username">暱稱</string>
    <string name="customer_register_password">密碼</string>
    <string name="customer_register_password_again">確認密碼</string>
    <string name="customer_register_cellphone">手機號碼</string>
    <string name="customer_register_cellphone_code">※系統將發送驗證碼至此號碼</string>
    <string name="customer_register_enter_code">輸入發送給您的4位數驗證號碼：</string>
    <string name="customer_register_again_code">重新發送</string>
    <string name="customer_register_again_code_at">於</string>
    <string name="customer_register_again_code_wait">秒後可重新發送驗證碼</string>
    <string name="customer_register_cellphone_hint">+886&#8211;912&#8211;345&#8211;678</string>
    <string name="customer_register_error_username">帳號名稱錯誤</string>
    <string name="customer_register_error_password">密碼格式錯誤(只可包含英數字)</string>
    <string name="customer_register_error_password_again">兩次密碼不符合</string>
    <string name="customer_register_error_cellphone">手機格式錯誤</string>
    <string name="customer_register_error_username_used">此帳號已被註冊</string>
    <string name="customer_register_error_cellphone_used">此手機號碼已被認證</string>
    <string name="customer_register_error_verify_length">請輸入4位數驗證號碼</string>
    <string name="customer_register_error_verify_wrong">驗證碼不正確</string>
    <string name="customer_register_success">成功註冊，請登入</string>
    <string name="store_register_title">商家申請資料填寫：</string>
    <string name="store_register_username">暱稱</string>
    <string name="store_register_password">密碼</string>
    <string name="store_register_password_again">確認密碼</string>
    <string name="store_register_name">店家名稱</string>
    <string name="store_register_address">店家地址</string>
    <string name="store_register_contact">聯絡人姓名</string>
    <string name="store_register_phone">聯絡電話</string>
    <string name="store_register_email">電子信箱</string>
    <string name="store_register_error_contact">請輸入聯絡人名稱</string>
    <string name="store_register_error_store">請輸入店家名稱</string>
    <string name="store_register_error_address">請輸入店家地址</string>
    <string name="store_register_error_email">電子信箱格式錯誤</string>
    <string name="store_register_error_exists">此帳號已存在</string>
    <string name="store_register_success">申請成功，請耐心等待核准！</string>
    <string name="customer_main_no_info">尚未提供</string>
    <string name="customer_main_price">均消$</string>
    <string name="customer_main_low">店內最低消費金額，每人：</string>
    <string name="customer_main_price_per">/人</string>
    <string name="customer_main_distance">50m</string>
    <string name="customer_main_reserve">立即預約</string>
    <string name="customer_main_open">營業時間</string>
    <string name="customer_main_type">下午茶</string>
    <string name="customer_main_info">店家說明</string>
    <string name="customer_main_info_content">詳細內容</string>
    <string name="customer_main_comments">評價及評論</string>
    <string name="customer_main_acknowledge">預約服務須知</string>
    <string name="customer_main_acknowledge_content">* 本預約需在規定時間15分鐘（依照該店家規定）以內到達該店家領位。\n
        * 與預約者共同前往消費者，須支付店內最低消費金額，每名：200元（依照該店家規定）。\n
        * 為保障您的權益，請於到達現場時，立即要求領位，出示行動裝置之預約認證頁面，並在店員面前完成QR-code掃描。\n
        * 預約客人需全數到齊，若未在規定時間內到齊，該店家有權取消此預約。\n
        * 本預約僅限內用使用，不提供餐點外帶。\n
        * 所有折扣優惠依照店家設定的為主，如有任何問題應與店家進行協調。與平台無關。\n
        * 因交通狀況較難隨時掌握，若您擔心無法在規定時間內趕到，建議您先以電話告知店家以保留以預約之桌位。\n
        * 餐點菜色依店家實際提供為主，平台照片僅供參考。\n
        * 若有其他疑問，請聯繫客服。</string>
    <string-array name="customer_sp_sort">
        <item>預設排序</item>
        <item>依最新</item>
        <item>依距離</item>
        <item>依評價</item>
    </string-array>
    <string-array name="customer_sp_distance">
        <item>全部</item>
        <item>距離&lt;0.5km</item>
        <item>距離&lt;1km</item>
        <item>距離&lt;1.5km</item>
        <item>距離&lt;2km</item>
        <item>距離&lt;3km</item>
    </string-array>
    <string-array name="customer_sp_food">
        <item>全部美食分類</item>
        <item>中式料理</item>
        <item>日式料理</item>
        <item>美式料理</item>
        <item>韓式料理</item>
        <item>泰式料理</item>
        <item>異國料理</item>
        <item>鍋類</item>
        <item>燒烤類</item>
        <item>韓式料理</item>
        <item>咖啡簡餐</item>
        <item>素食</item>
        <item>速食快餐</item>
        <item>Buffet自助餐</item>
        <item>韓式料理</item>
        <item>小吃</item>
        <item>飲料甜點</item>
        <item>其他</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_reservation">立即預約</string>
    <string name="drawer_detail">預約明細</string>
    <string name="drawer_profile">個人資料</string>
    <string name="drawer_points">FLASH Points兌換區</string>
    <string name="drawer_logout">登出</string>
    <string name="customer_profile_name">使用者名稱</string>
    <string name="customer_profile_credit">信譽分數 </string>
    <string name="customer_profile_reservations">預約紀錄</string>
    <string name="customer_profile_comments">我要評論</string>
    <string name="customer_profile_points_record">FLASH Points紀錄</string>
    <string name="customer_profile_contact_us">聯絡我們</string>
    <string name="customer_profile_edit">編輯</string>
    <string name="customer_profile_about_credit">了解信譽分數</string>
    <string name="customer_profile_pick_image">頭像選擇</string>
    <string name="customer_profile_camera">相機</string>
    <string name="customer_profile_gallery">相簿</string>
    <string name="customer_profile_exchange_gifts">FLASH Points好禮兌換</string>
    <string name="customer_profile_exchange_gifts_content"><font color="#fff">每次預約用餐每人可得</font> <font color="#660000">5</font>
        <font color="#fff">FLASH Points\n現在開始累積你的FLASH Points\n各種專屬回饋好禮在兌換區等你喔！</font></string>
    <string name="customer_profile_exchange_gifts_now">立即前往兌換</string>
    <string name="customer_profile_change_name">編輯我的暱稱</string>
    <string name="customer_profile_name_hint">請輸入新的暱稱</string>
    <string name="customer_profile_name_used">此暱稱已被使用</string>
    <string name="customer_profile_name_success">暱稱更改成功</string>
    <string name="customer_profile_name_empty">請輸入新的暱稱</string>
    <string name="customer_detail_title">預約紀錄</string>
    <string name="customer_detail_shop">店家名稱</string>
    <string name="customer_detail_location">店家地址</string>
    <string name="customer_detail_time">2017/02/14 08:00pm</string>
    <string name="customer_detail_success">成功訂位(</string>
    <string name="customer_detail_persons">人)桌位</string>
    <string name="customer_detail_fail">訂位失敗(</string>
    <string name="customer_detail_record_title">預約紀錄明細</string>
    <string name="customer_detail_record_time">預約時間：</string>
    <string name="customer_detail_record_arrival_time">入座時間：</string>
    <string name="customer_detail_record_discount">暫無折扣</string>
    <string name="customer_detail_record_gift">暫無優惠</string>
    <string name="customer_detail_record_comment">我要評價及評論</string>
    <string name="customer_detail_none">尚無紀錄</string>
    <string name="customer_reservation_waiting">等待店家回應中&#8230;</string>
    <string name="customer_reservation_no_response">店家無回應</string>
    <string name="customer_reservation_seconds">秒</string>
    <string name="customer_reservation_success">您已成功預約</string>
    <string name="customer_reservation_persons">人位</string>
    <string name="customer_reservation_15_minutes">請於15分鐘內到達</string>
    <string name="customer_reservation_qr_code">提醒您！記得給店家掃描以確認預約喔</string>
    <string name="customer_reservation_cancel">取消預約</string>
    <string name="customer_reservation_cancel_confirm">確定取消預約？</string>
    <string name="customer_reservation_time_left">還有</string>
    <string name="customer_reservation_late">您的預約已逾時，店家可能隨時取消您的預約，請盡速到達</string>
    <string name="customer_reservation_canceled">店家沒有回應\n去看看別的優惠吧！</string>
    <string name="customer_comments_my_title">我的評價及評論</string>
    <string name="customer_comments_title">評價及評論</string>
    <string name="customer_comments_none">尚無評論</string>
    <string name="customer_comments_success">成功留下評論！</string>
    <string name="customer_comments_error_no_rating">您尚未選擇評分喔</string>
    <string name="customer_comments_error_not_sent">填寫的內容尚未送出，確定回到上一頁嗎？</string>
    <string name="customer_comments_error_fail_reservation">預約失敗不能夠評論喔！</string>
    <string name="customer_comments_error_already_comment">您已經評論過這個店家咯！</string>
    <string name="customer_rating_title">評價及評論</string>
    <string name="customer_rating_hint">留下好評吧&#8230;</string>
    <string name="customer_search_title">搜尋餐廳</string>
    <string name="customer_search_hint">請輸入搜尋餐廳</string>
    <string name="customer_search_result_1">已找到</string>
    <string name="customer_search_result_2">筆相關資料</string>
    <string name="customer_credit_about">信譽分數介紹</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>