<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/customer_drawer_reservation"
            android:title="@string/drawer_reservation"
            android:icon="@drawable/ic_customer_drawer_reservation_square"/>
        <item
            android:id="@+id/customer_drawer_detail"
            android:title="@string/drawer_detail"
            android:icon="@drawable/ic_customer_drawer_detail"/>
        <item
            android:id="@+id/customer_drawer_profile"
            android:title="@string/drawer_profile"
            android:icon="@drawable/ic_customer_drawer_profile"/>

        <item
            android:id="@+id/customer_drawer_points"
            android:title="@string/drawer_points"
            android:icon="@drawable/ic_flash_points"/>

        <item
            android:id="@+id/customer_drawer_logout"
            android:title="@string/drawer_logout"
            android:icon="@drawable/ic_logout"/>

        <item
            android:id="@+id/customer_drawer_none"
            android:title=""
            android:visible="false"/>
    </group>

</menu>
