<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_customer_ll_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_back_white"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/white"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/logo_white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_customer_et_account"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:ems="15"
            android:maxLines="1"
            android:background="@drawable/round_rectangle_white"
            android:inputType="phone"
            android:textCursorDrawable="@null"
            android:textColor="@color/textColor"
            android:textSize="17sp"
            android:hint="@string/login_cellphone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/login_customer_et_password"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:ems="15"
            android:maxLines="1"
            android:background="@drawable/round_rectangle_white"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textColor="@color/textColor"
            android:textSize="17sp"
            android:hint="@string/login_password"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/login_customer_bt_submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/round_rectangle_orange"
            android:text="@string/login_submit"
            android:textColor="@color/white"
            android:textSize="17sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/login_customer_bt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TransparentButton"
        android:text="@string/login_register"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>


    <Button
        android:id="@+id/login_customer_bt_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TransparentButton"
        android:text="@string/login_forgot_password"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
