<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:id="@+id/customer_detail_iv_shop"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_toEndOf="@id/customer_detail_iv_shop">

        <TextView
            android:id="@+id/customer_detail_tv_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_detail_shop"
            android:textColor="@color/textColorDark"
            android:layout_marginBottom="8dp"
            android:textSize="17sp"/>
        
        <TextView
            android:id="@+id/customer_detail_tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_detail_location"
            android:textColor="@color/textColorLight"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/customer_detail_tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_detail_time"
            android:textColor="@color/textColorLight"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="2dp">

            <TextView
                android:id="@+id/customer_detail_tv_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_detail_success"
                android:textColor="@color/textColorOrange"
                android:textSize="13sp"
                android:layout_marginEnd="5dp"/>

            <ImageView
                android:id="@+id/customer_detail_iv_credit"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/customer_detail_credit_plus"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
