<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:clipToPadding="false"
        android:layout_marginBottom="90dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/customer_reservation_tv_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/textColorOrange"
                android:text="@string/customer_reservation_success"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="15dp"
                android:textSize="15sp"
                android:textColor="@color/textColorOrange"
                android:text="@string/customer_reservation_15_minutes"/>

            <ImageView
                android:id="@+id/customer_reservation_iv_qr_code"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/qr_code"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/customer_reservation_qr_code"
                android:textSize="14sp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/customer_reservation_tv_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_detail_shop"
                android:textColor="@color/textColor"
                android:textSize="17sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginBottom="5dp"/>

            <RatingBar
                android:id="@+id/customer_reservation_rb_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RatingBar"
                android:layout_marginStart="17dp"
                android:layout_marginBottom="0dp"/>

            <!-- SPACER VIEW -->
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/lightgray"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_discount"/>

                <TextView
                    android:id="@+id/customer_reservation_tv_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_detail_record_discount"
                    android:textSize="15sp"
                    android:textColor="@color/textColorOrange"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_gift"/>

                <TextView
                    android:id="@+id/customer_reservation_tv_gift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_detail_record_gift"
                    android:textSize="15sp"
                    android:textColor="@color/textColorOrange"/>

            </LinearLayout>

            <!-- SPACER VIEW -->
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/lightgray"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/customer_reservation_bt_arrive_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomerOrangeButton"
        android:layout_alignParentBottom="true"
        android:text="@string/customer_reservation_cancel"/>

    <LinearLayout
        android:id="@+id/customer_reservation_ll_time_left"
        android:layout_above="@id/customer_reservation_bt_arrive_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:padding="10dp"
        android:background="@color/white">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_time"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/customer_reservation_time_left"
            android:textColor="@color/textColorOrange"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/customer_reservation_tv_arrival_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/textColorOrange"
            android:textSize="17sp"/>
    </LinearLayout>

    <!-- SPACER VIEW -->
    <View
        android:layout_above="@id/customer_reservation_ll_time_left"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/lightgray"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

</RelativeLayout>
