<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_profile_pick_image"
        android:background="@drawable/round_top_rectangle_light_orange"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/alert_image_ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_margin="2dp">

        <LinearLayout
            android:id="@+id/alert_image_ll_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_camera"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_profile_camera"
                android:textColor="@color/textColorLight"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:id="@+id/alert_image_ll_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_gallery"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_profile_gallery"
                android:textColor="@color/textColorLight"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/alert_image_ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="2dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="0dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/alert_image_bt_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_rectangle_light_orange"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:padding="10dp"/>

    </LinearLayout>

</LinearLayout>